--- a/alexa-app/package.json
+++ b/alexa-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://posix23.github.io/privacy-issue-website",
+  "homepage": "https://posix23.github.io/privacy-issue-website",
   "name": "alexa-app",
   "version": "0.1.0",
   "private": true,
